Add extensive configuration and logging testing and refactor directory handling
- Added `ConfigManagerTest` and `LogSystemTest` to validate configuration behavior and logging functionality.
- Refactored directory logic across the `ConfigManager`, `CrashHandler`, `LogSystem`, and `PluginManager` for better support of test environments and custom directories.
- Simplified update settings in UI.
- Improved version handling in `build.gradle` and introduced version resolution based on tags or commits.
- Refined GitHub workflows by removing version-modification steps.
- Minor UI updates, including the addition of a GitHub link and setting a default dialog button.

( again used ai bc i am lazy and sick while doing this )